# ews-mail-automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint-yaml.yml  publish.yml  pypi-python-package-publish.yml
doc/: pre-commit.adoc
src/exchange_automator/: __init__.py  __version.py  cli.py
tests/: conftest.py
tests/system/: test_cli_empty.py  test_cli_version.py
tests/unit/: test_version.py
