[build-system]
requires = ["setuptools>=62", "wheel", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-automator"
description = "Python package for automating Exchange tasks via EWS"
readme = "Readme.md"
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/jose-albino/ews-mail-automation" }
authors = [{ name = "Jose Albino", email = "pypi-packages-email.pendant519@passmail.com" }]
requires-python = ">=3.8"
dependencies = []


[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "nox",
    "pre-commit",
    "twine",
    "versioningit"
]

[tool.versioningit]
vcs = "git"
style = "pep440"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.versioningit.format]
distance = ".dev{distance}+g{commitid}"
dirty = "{version}.dirty"

[tool.versioningit.onbuild]
default-version = "0.0.99versionNotFound"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = 3.8
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=my_package"
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/system"
]