[build-system]
requires = ["setuptools>=62", "wheel", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-automator"
description = "Python package for automating Exchange tasks via EWS"
readme = "Readme.md"
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/jose-albino/ews-mail-automation" }
authors = [{ name = "Jose Albino", email = "pypi-packages-email.pendant519@passmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "exchangelib",
    "requests"
]

[project.scripts]
exchange-automator = "exchange_automator.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "nox",
    "pre-commit",
    "twine",
    "versioningit"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioningit]
vcs = "git"
fallback-version = "0.0.99versionNotFound"

[tool.versioningit.format]
distance = ".dev{distance}+g{commitid}"
dirty = "{version}.dirty"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = 3.8
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=exchange-automator"
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/system"
]

[tool.coverage.run]
branch = true