[metadata]
name = exchange-automator

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    exchangelib
    requests

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    exchange_automator = exchange_automator.cli:main


[tool:pytest]
addopts = --strict-markers --tb=short --cov=exchange_automator
testpaths =
    tests/unit
    tests/integration
    tests/system

[coverage:run]
branch = True

